--- a/iire/src/App.css
+++ b/iire/src/App.css
@@ -1,4 +1,5 @@
 .container{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   max-width: 80%;
   margin: 0 auto;
 }
@@ -14,7 +15,7 @@
   text-align: center;
 }
 
-img {
+.slide  img {
   max-width: 100%;
   height: auto;
   border: 1px solid #ddd;
@@ -23,7 +24,7 @@ img {
 }
 
 .slide-button {
-  background-color: #6f1c11;
+  background-color: #9595958b;
   color: #fff;
   font-size: 16px;
   padding: 10px 20px;
@@ -37,32 +38,46 @@ img {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+  transition: all ease 0.5s;
 }
 
 .next-button {
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  transition: all ease 0.5s;
 }
 
-.prev-button:hover,
+.prev-button:hover{
+  left:-5px;
+  
+}
 .next-button:hover {
-  background-color: #d66354;
+  right:-5px;
+  
 }
 
 
 .meeting-rooms{
   display: flex;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 .meeting-rooms-text{
   flex-direction: column;
   flex-basis:50%;
+  margin-right: 10px;
+  margin-left: 10px;
+  
 
 }
+
 .meeting-rooms-image{
   position: relative;
   flex-basis:50%;
   background-size: cover;
+  height: 350px;
+  background-position: bottom;
 
 }
 .tab-buttons{
@@ -75,21 +90,35 @@ img {
   display: block;
 }
 .tab-button.active{
-  background-color: #d66354;
+  cursor:pointer;
+  position: relative;
+  background-color: #e9e9e9;
+  top:1px;
 }
 .room-tabs{
   position: absolute;
   bottom: 0;
   left: 0;
 }
+.tab-contents{
+  opacity: 0.8;
+  background-color: #1c6f11;
+  color: white  ;
+  padding: 10px;
+}
 .cards{
+  position: absolute;
   display: flex;
   justify-content: center;
-  margin: 10%;
+  margin-top: 5%;
+  margin-left: 5%;
+  
+  
 
 }
 .service-card{
-  
+  width: 300px;
+  height: 600px;
   padding-right: 10px;
   padding-left: 10px;
   margin: 10px;
@@ -97,13 +126,124 @@ img {
   
 }
 .card-content{
-  color: black;
-  background-color: #6f1c11;
+  color: white;
+  
+  display: flex;
+  flex-direction: column; /* Make the content stack vertically */
+  position: relative;
+  padding: 10px; /* Add some padding for spacing */
 
-}
-.service-title{
-  margin-bottom: 30px;
 }
 .card-image-container{
   display: flex;
+  flex-direction: column; /* Make the content stack vertically */
+  align-items: center; /* Center align the content horizontally */
+}
+.card-image{
+  height: auto;
+  max-width: 100%; /* Ensure the image doesn't overflow its container */
+}
+.service-title{
+  margin-bottom: 20px;
+  font-size:x-large;
+  font-weight: 800;  
+}
+.service-description{
+  margin-bottom: 60px;
+}
+.more-service-button{
+  
+  position: absolute;
+  right: 10px;
+  bottom:10px;
+}
+.cards-container{
+  position: relative;
+  
+}
+.colored-background{
+  position: absolute;
+  
+  background-color: yellow;
+  height: 300px;
+  width: 75vw;
+  z-index: -1;
+  margin-bottom: 30px;
+ 
+  
+}
+.colored-background span{
+  font-size: xx-large;
+  position: absolute;
+  top: -20px;
+  left: 50px;
+}
+.slider-container{
+  position: relative;
+}
+.slider-message{
+  color: white;
+  left: 20%;
+  width: 65%;
+  background-color: #1c6f11  ;
+  position: absolute;
+  bottom: -30px;
+  opacity: 0.8;
+}
+.slider-message h1{
+  margin-left: 10px;
+font-size:xx-large ;
+}
+.slider-message p{
+  font-size:large ;
+  margin-left: 10px;
+  }
+
+
+.header {
+  justify-content: center ;
+  width: 80vw;
+  background-color: #6f1c11;
+  display: flex ;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.header > *{
+  margin: auto;
+  text-decoration: none;
+  color: white;
+  font-size: large;
+  font-weight: bold;
+}
+
+.dropdown-items{
+  display: none;
+  
+  
+}
+.dropdown-items a{
+  text-decoration: none;
+  color: white;
+  margin-top: 10px;
+  
+  
+
+}
+.dropdown-menu-list{
+  list-style: none;
+}
+
+.dropdown-menu-list:hover .dropdown-items{
+  margin-top: 10px;
+  background-color: #6f1c11;
+  z-index: 10;
+  position: absolute;
+  display: grid;}
+.logo{
+  width: 120px;
+  
+  
+  
+
+  
 }
